# PeepoChat

./: .gitignore  .hintrc  bun.lockb  faviconData.json  faviconDescription.json  nuxt.config.ts  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/: .markdownlint.json  README.md
src/: App.vue  app.vue  index.html  main.ts  router.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: lang.ts
src/assets/lang/: en.json  en_us.json
src/assets/site/icon/: browserconfig.xml
src/assets/site/style/: main.css
src/components/: Sidebar.vue
src/components/elements/: Dropdown.vue  Input.vue
src/components/elements/buttons/: AvatarButton.vue  IconButton.vue  LinkIconButton.vue  ToggleIconButton.vue
src/components/elements/modals/: Modal.vue
src/components/footers/: SidebarFooter.vue
src/components/preset/animations/: Spinner.vue
src/components/preset/buttons/: AccountButton.vue  ChannelButton.vue  SidebarButton.vue  ThemeToggleButton.vue
src/components/preset/modals/: AddChannelModal.vue
src/components/preset/views/: EmptyStateView.vue
src/components/states/empty-states/: NoChatSelected.vue  NoMentions.vue
src/components/states/loading-states/: Loading.vue
src/components/ui/data-display/: Popover.vue  Typography.vue
src/components/views/: LoadingView.vue  NoChannelSelectedView.vue  NoMentionsView.vue
src/layouts/: default.vue
src/pages/: index.vue
src/store/: defaults.ts  store.ts
src/types/: global.d.ts
(+37 files in other folders)
