[package]
# TODO: Project Information
name = "peepochat"
version = "0.0.0"
description = "Live Stream Chat Client"
authors = ["DanMizu"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Dan-Mizu/PeepoChat"
# Leave this alone, as it references the Tauri edition, and has nothing to do with your project.
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
twitch_api = { version = "0.7.0-rc.6", features = ["all", "reqwest"] }
tokio = { version = "1.32.0", features = ["full"] }
reqwest = "0.11.20"
dotenvy = "0.15.7"
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
